<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/main.collapsing"
            android:layout_width="match_parent"
            android:layout_height="220dp"
            app:contentScrim="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|snap">

            <ImageView
                android:id="@+id/backdrop"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/accessibility_backdrop"
                android:scaleType="centerCrop"
                app:layout_collapseMode="parallax"/>
        </android.support.design.widget.CollapsingToolbarLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/poster_height"
            android:layout_gravity="start"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="-100dp"
            android:background="@android:color/transparent"
            app:layout_collapseMode="parallax"
            app:layout_scrollFlags="scroll">

            <ImageView
                android:id="@+id/poster"
                android:layout_width="@dimen/poster_width"
                android:layout_height="match_parent"
                android:layout_gravity="start"
                android:contentDescription="@string/accessibility_poster"
                android:scaleType="centerCrop"
                app:layout_scrollFlags="scroll"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="100dp"
                android:layout_toEndOf="@+id/poster"
                android:layout_toRightOf="@+id/poster"
                android:background="@android:color/transparent"
                android:orientation="vertical"
                android:padding="10dp">

                <TextView
                    android:id="@+id/title"
                    style="@style/WhiteTitleText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:id="@+id/release_date"
                    style="@style/TransparentLargeText"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingTop="10dp"/>
            </LinearLayout>
        </RelativeLayout>

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <TextView
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="34dp"
            android:lineSpacingExtra="8dp"
            android:padding="@dimen/activity_horizontal_margin"
            android:textSize="16sp"/>
    </android.support.v4.widget.NestedScrollView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/add_to_favorites"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:clickable="true"
        android:contentDescription="@string/accessibility_add_to_favorites"
        android:elevation="8dp"
        app:layout_anchor="@id/appbar"
        app:layout_anchorGravity="bottom|right|end"
        tools:ignore="UnusedAttribute"/>

</android.support.design.widget.CoordinatorLayout>
