<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:id="@+id/view_item"
              android:layout_width="@dimen/poster_width_plus_one"
              android:layout_height="@dimen/poster_height"
              android:orientation="horizontal">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                    android:layout_width="@dimen/poster_width"
                    android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/view_item_image_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/view_item_image"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:contentDescription="@string/accessibility_poster"/>
        </LinearLayout>

        <RelativeLayout
            android:id="@+id/view_item_detail"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_alignParentBottom="true"
            android:background="@color/cardview_dark_background"
            android:paddingEnd="5dp"
            android:paddingStart="5dp">

            <TextView
                android:id="@+id/view_item_title"
                style="@style/WhiteCardText"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_toLeftOf="@+id/view_item_star"
                android:layout_toStartOf="@+id/view_item_star"
                android:background="@android:color/transparent"
                android:ellipsize="end"
                android:gravity="center_vertical"
                android:importantForAccessibility="no"
                android:maxLines="2"/>

            <ImageView
                android:id="@+id/view_item_star"
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:layout_marginBottom="11dp"
                android:layout_marginTop="11dp"
                android:layout_toLeftOf="@+id/view_item_rating"
                android:layout_toStartOf="@+id/view_item_rating"
                android:background="@android:color/transparent"
                android:importantForAccessibility="no"
                android:gravity="center_vertical"/>

            <TextView
                android:id="@+id/view_item_rating"
                style="@style/WhiteCardText"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:background="@android:color/transparent"
                android:ellipsize="none"
                android:gravity="center_vertical"
                android:importantForAccessibility="no"
                android:maxLines="1"/>
        </RelativeLayout>
    </RelativeLayout>

    <View
        android:id="@+id/line"
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:background="@color/white"/>

</LinearLayout>
